refactor: remove context grouping by ID and label logic